<resources>

    <!-- SyncAdapter -->
    <string name="sync_account_type">paperwork.rocks</string>
    <string name="content_authority">rocks.paperwork.app</string>

    <string name="app_name">Paperwork</string>
    <string name="no_notes">No notes</string>
    <string name="empty_title_hint">Your note title</string>
    <string name="empty_note_hint">Write your note</string>
    <string name="empty_note">Note was not saved</string>
    <string name="save">Save</string>
    <string name="delete_note">Delete Note</string>
    <string name="attach_file">Attach file</string>
    <string name="image">Image</string>
    <string name="file">File</string>
    <string name="take_photo">Take photo</string>
    <string name="search">Search</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="all_notes">All notes</string>
    <string name="notebooks">Notebooks</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="tags">Tags</string>
    <string name="about">About</string>
    <string name="more">More</string>
    <string name="discard">Discard?</string>
    <string name="discard_changes">Your change are not saved. Do you really want to discard your changes?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="empty_title_error">Title cannot be empty</string>
    <string name="timeout_error">The server is not responding</string>
    <string name="note">note</string>
    <string name="notes">notes</string>
    <string name="wait">Please wait…</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="add_tag">Add Tag</string>
    <string name="move_to">Move To</string>
    <string name="move_to_message">Choose the new notebook for this note</string>
    <string name="delete">Delete</string>
    <string name="delete_note_message">Are you sure that you want to delete this note?</string>
    <string name="create_notebook_title">Create Notebook</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="auth_host_url">Server address https://…</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="action_sign_in">Sign in</string>

    <string name="error_invalid_url">This url is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">Password or email is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>
