<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_notes"
            android:icon="@mipmap/ic_note_grey"
            android:title="@string/all_notes"/>
        <item
            android:id="@+id/nav_notebooks"
            android:icon="@mipmap/ic_notebook_grey"
            android:title="@string/notebooks"/>
    </group>

    <item
        android:id="@+id/tags"
        android:title="Tags">

        <menu>
            <item
                android:icon="@mipmap/ic_tags_grey"
                android:title="tag1"/>
            <item
                android:icon="@mipmap/ic_tags_grey"
                android:title="tag2"/>
        </menu>
    </item>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_settings_grey"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/ic_about_grey"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>
